<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF7F7"
    tools:context=".SupplierRadioActivity">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/radio_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addSupplier"
            android:onClick="checkButton"
            />

        <RadioButton
            android:id="@+id/radio_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplierList"
            android:onClick="checkButton"/>

        <RadioButton
            android:id="@+id/radio_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dueSupplier"
            android:onClick="checkButton"/>

    </RadioGroup>


</RelativeLayout>